--- a/my-quiz/src/landing-page/footer/footer.css
+++ b/my-quiz/src/landing-page/footer/footer.css
@@ -2,9 +2,22 @@
   padding-top: 1%;
   font-size: 30px;
   padding-bottom: 1%;
-  background-color: #384269; }
+  background-color: #384269;
+  text-align: center; }
   .footer__logo {
     width: 100px;
     height: 100px;
     border: none;
-    border-radius: 80px; }
+    border-radius: 80px;
+    margin: auto; }
+  .footer__logo img {
+    width: 100%;
+    height: auto; }
+  .footer__social {
+    margin: auto; }
+
+@media screen and (max-width: 1024px) {
+  .container {
+    width: 60%;
+    margin-left: auto;
+    margin-right: auto; } }
