--- a/my-quiz/src/log-in/log-in.css
+++ b/my-quiz/src/log-in/log-in.css
@@ -1,30 +1,81 @@
-.auth-page .hero.is-success {
-  background: #f2f6fa; }
+.registration__picture {
+  width: 100%;
+  height: 50%;
+  position: relative; }
 
-.auth-page .hero .nav,
-.auth-page .hero.is-success .nav {
-  -webkit-box-shadow: none;
-  box-shadow: none; }
+.registration__items {
+  position: absolute;
+  margin-top: 16%;
+  width: 40%;
+  position: absolute;
+  text-align: center;
+  margin-left: 5%;
+  padding-bottom: 0px;
+  padding-top: 0px; }
+  @media screen and (max-width: 1024px) {
+    .registration__items {
+      margin-top: 10%;
+      margin-left: 2%; } }
+  @media screen and (max-width: 760px) {
+    .registration__items {
+      margin-top: 14%;
+      width: 30%; } }
 
-.auth-page .box {
-  margin-top: 5rem; }
+.registration__title {
+  font-weight: bold;
+  color: #3a446e;
+  font-size: 30px; }
+  @media screen and (max-width: 760px) {
+    .registration__title {
+      font-size: 15px;
+      padding-bottom: 5px; } }
 
-.auth-page .avatar {
-  margin-top: -70px;
-  padding-bottom: 20px; }
+.registration__button {
+  font-weight: bold;
+  font-size: 20px;
+  margin-top: 40px;
+  width: 40%;
+  background-color: #38436d;
+  margin-right: auto;
+  margin-left: auto;
+  color: whitesmoke; }
+  @media screen and (max-width: 1024px) {
+    .registration__button {
+      width: 50%; } }
+  @media screen and (max-width: 1024px) {
+    .registration__button {
+      font-size: 12px;
+      width: 60%;
+      margin-top: 10px; } }
 
-.auth-page .avatar img {
-  padding: 5px;
-  background: #fff;
-  border-radius: 50%;
-  -webkit-box-shadow: 0 2px 3px rgba(10, 10, 10, 0.1), 0 0 0 1px rgba(10, 10, 10, 0.1);
-  box-shadow: 0 2px 3px rgba(10, 10, 10, 0.1), 0 0 0 1px rgba(10, 10, 10, 0.1); }
+.registration__form-item {
+  border-bottom: 2px solid #38436d;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: row;
+  flex-direction: row;
+  padding: 2%; }
+  @media screen and (max-width: 760px) {
+    .registration__form-item {
+      padding: 1%; } }
 
-.auth-page input {
-  font-weight: 300; }
+.registration__form-input {
+  border: none;
+  padding: 0;
+  padding-left: 3%;
+  font-size: 20px; }
+  @media screen and (max-width: 1024px) {
+    .registration__form-input {
+      font-size: 16px; } }
+  @media screen and (max-width: 760px) {
+    .registration__form-input {
+      font-size: 12px; } }
 
-.auth-page p {
-  font-weight: 700; }
-
-.auth-page p.subtitle {
-  padding-top: 1rem; }
+.registration-link {
+  font-size: 18px;
+  text-align: center;
+  color: tomato;
+  font-weight: bold; }
