--- a/my-quiz/src/landing-page/get-started/get-started.css
+++ b/my-quiz/src/landing-page/get-started/get-started.css
@@ -14,3 +14,7 @@
   margin-top: 40px;
   height: 60px;
   font-size: 20px; }
+  @media screen and (max-width: 1024px) {
+    .get-started-button {
+      width: 50%;
+      margin-bottom: 60px; } }
