--- a/my-quiz/src/landing-page/header/header.css
+++ b/my-quiz/src/landing-page/header/header.css
@@ -1,39 +1,29 @@
-.header__logo {
-  width: 100px;
-  height: 100px;
-  border: none;
-  border-radius: 50px; }
-
-.header__menu a {
-  color: black !important;
-  margin-left: 25px !important;
-  font-size: 18px; }
-
-.header__buttonSize {
-  width: 110px;
-  font-weight: bold;
-  height: 40px;
-  border: none; }
-
-.header__logIn {
-  background-color: #c1eaf2;
-  margin-right: 20px;
-  color: #1a1ea9; }
-
-.header__signUp {
-  background-color: tomato; }
+@media screen and (max-width: 1024px) {
+  .header-description {
+    background-color: #e9f6f9; } }
 
 .header-description__text {
-  width: 300px;
-  margin-left: 170px;
-  font-size: 26px;
+  width: 400px;
+  margin-left: 190px;
+  font-size: 40px;
   color: #1a1ea9;
   margin-top: 50%;
-  font-weight: 400; }
+  font-weight: 400;
+  text-align: center; }
+  @media screen and (max-width: 760px) {
+    .header-description__text {
+      padding-top: 5%;
+      width: 100%;
+      font-weight: 600;
+      margin-top: 0%;
+      margin-left: 0px; } }
 
 .header-description__image {
-  width: 60%;
-  margin-top: -20px; }
+  width: 60%; }
+  @media screen and (max-width: 1024px) {
+    .header-description__image {
+      width: 100%;
+      margin-top: 60px; } }
 
 .header-description__image img {
   width: 100%;
