--- a/my-quiz/src/landing-page/header/header.scss
+++ b/my-quiz/src/landing-page/header/header.scss
@@ -1,44 +1,34 @@
-.header {
-  &__logo {
-    width: 100px;
-    height: 100px;
-    border: none;
-    border-radius: 50px;
-  }
-  &__menu a {
-    color: black !important;
-    margin-left: 25px !important;
-    font-size: 18px;
-  }
-
-  &__buttonSize {
-    width: 110px;
-    font-weight: bold;
-    height: 40px;
-    border: none;
-  }
-  &__logIn {
-    background-color: #c1eaf2;
-    margin-right: 20px;
-    color: #1a1ea9;
-  }
-  &__signUp {
-    background-color: tomato;
-  }
-}
+$mdSize: 1024px;
+$smSize: 760px;
 
 .header-description {
+  @media screen and(max-width: $mdSize) {
+    background-color: #e9f6f9;
+  }
+
   &__text {
-    width: 300px;
-    margin-left: 170px;
-    font-size: 26px;
+    width: 400px;
+    margin-left: 190px;
+    font-size: 40px;
     color: #1a1ea9;
     margin-top: 50%;
     font-weight: 400;
+    text-align: center;
+    @media screen and(max-width: $smSize) {
+      padding-top: 5%;
+      width: 100%;
+      font-weight: 600;
+      margin-top: 0%;
+      margin-left: 0px;
+    }
   }
   &__image {
     width: 60%;
-    margin-top: -20px;
+
+    @media screen and(max-width: $mdSize) {
+      width: 100%;
+      margin-top: 60px;
+    }
   }
   &__image img {
     width: 100%;
