--- a/my-quiz/src/registered-user/main-page/main-page.css
+++ b/my-quiz/src/registered-user/main-page/main-page.css
@@ -6,44 +6,45 @@
   position: relative; }
 
 .main-page-text {
-  padding-top: 23%;
-  width: 50%;
+  width: 100%;
   font-size: 28px;
   position: absolute;
-  text-align: center; }
-  @media screen and (max-width: 1024px) {
+  text-align: center;
+  margin-top: 11%;
+  line-height: 40px; }
+  @media screen and (max-width: 1020px) {
     .main-page-text {
-      width: 40%;
-      padding-top: 20%;
-      font-size: 18px;
-      padding-left: 5%; } }
+      font-size: 17px;
+      line-height: 20px; } }
   @media screen and (max-width: 760px) {
     .main-page-text {
-      font-size: 16px;
-      padding-top: 10%;
-      padding-left: 0%;
-      width: 40%; } }
+      font-size: 12px;
+      line-height: 8px; } }
   .main-page-text__title {
     font-size: 50px;
     font-weight: 500; }
-    @media screen and (max-width: 1024px) {
+    @media screen and (max-width: 1020px) {
       .main-page-text__title {
         font-size: 25px; } }
     @media screen and (max-width: 760px) {
       .main-page-text__title {
-        font-size: 20px; } }
+        font-size: 16px; } }
   .main-page-text__button {
-    width: 40%;
+    width: 15%;
     background-color: tomato;
     color: white;
     text-align: center;
     height: 70px;
-    border-radius: 20px; }
-    @media screen and (max-width: 1024px) {
+    border-radius: 20px;
+    font-size: 20px;
+    height: 50px; }
+    @media screen and (max-width: 1020px) {
       .main-page-text__button {
         height: 35px;
-        width: 40%;
         font-size: 13px; } }
     @media screen and (max-width: 760px) {
       .main-page-text__button {
-        width: 67%; } }
+        width: 20%;
+        height: 25px;
+        padding: 0px;
+        font-size: 10px; } }
