--- a/my-quiz/src/landing-page/footer/footer.css
+++ b/my-quiz/src/landing-page/footer/footer.css
@@ -2,8 +2,9 @@
   padding-top: 1%;
   font-size: 30px;
   padding-bottom: 1%;
-  background-color: #384269;
-  text-align: center; }
+  background-color: #c1eaf2;
+  text-align: center;
+  color: #1a1ea9; }
   .footer__logo {
     width: 100px;
     height: 100px;
