--- a/my-quiz/src/landing-page/footer/footer.scss
+++ b/my-quiz/src/landing-page/footer/footer.scss
@@ -5,8 +5,9 @@ $smSize: 760px;
   padding-top: 1%;
   font-size: 30px;
   padding-bottom: 1%;
-  background-color: #384269;
+  background-color: #c1eaf2;
   text-align: center;
+  color: #1a1ea9;
 
   &__logo {
     width: 100px;
