--- a/my-quiz/src/registered-user/quiz/quiz-level/styles/quiz-level.css
+++ b/my-quiz/src/registered-user/quiz/quiz-level/styles/quiz-level.css
@@ -73,8 +73,7 @@
   margin-top: 20px; }
   .each-quiz__image {
     width: 100%;
-    height: auto;
-    margin-top: -10%; }
+    height: auto; }
   .each-quiz__container {
     width: 50%;
     margin-left: auto;
